tests/snapshots/integration__dump_mode_outputs_ast_json.snap
---
source: tests/integration.rs
assertion_line: 2229
expression: json
---
{
  "kind": "Sequence",
  "statements": [
    {
      "span": {
        "start": 10,
        "end": 26
      },
      "kind": {
        "Message": {
          "from": "Alice",
          "to": "Bob",
          "arrow": "->",
          "label": "hi"
        }
      }
    }
  ]
}
