tests/snapshots/integration__dump_mode_outputs_ast_json_for_multiline_blocks.snap
---
source: tests/integration.rs
assertion_line: 1377
expression: json
---
{
  "kind": "Sequence",
  "statements": [
    {
      "span": {
        "start": 10,
        "end": 54
      },
      "kind": {
        "Title": "System overview\nwith details"
      }
    },
    {
      "span": {
        "start": 55,
        "end": 94
      },
      "kind": {
        "Header": "Release train\n2026.05"
      }
    },
    {
      "span": {
        "start": 95,
        "end": 143
      },
      "kind": {
        "Footer": "Confidential\ninternal use only"
      }
    },
    {
      "span": {
        "start": 144,
        "end": 186
      },
      "kind": {
        "Caption": "Flow summary\nall green"
      }
    },
    {
      "span": {
        "start": 187,
        "end": 215
      },
      "kind": {
        "Legend": "Alpha\nBeta"
      }
    },
    {
      "span": {
        "start": 216,
        "end": 234
      },
      "kind": {
        "Message": {
          "from": "Alice",
          "to": "Bob",
          "arrow": "->",
          "label": "ping"
        }
      }
    },
    {
      "span": {
        "start": 235,
        "end": 275
      },
      "kind": {
        "Note": {
          "position": "right",
          "target": "Bob",
          "text": "line 1\nline 2"
        }
      }
    }
  ]
}
