tests/snapshots/integration__dump_mode_outputs_json_array.snap
---
source: tests/integration.rs
expression: json
---
[
  {
    "bytes": 34,
    "content": "@startuml\nAlice -> Bob: hi\n@enduml",
    "has_start_enduml": true,
    "index": 0,
    "lines": 3,
    "source": "/home/Allie/develop/puml/tests/fixtures/single_valid.puml"
  }
]
