tests/snapshots/integration__dump_mode_scene_is_deterministic_for_same_input.snap
---
source: tests/integration.rs
assertion_line: 2279
expression: first_json
---
{
  "size": {
    "width": 620,
    "height": 280
  },
  "lanes": [
    {
      "id": "A",
      "display": "A",
      "role": "Participant",
      "x": 100
    },
    {
      "id": "B",
      "display": "B",
      "role": "Participant",
      "x": 240
    },
    {
      "id": "C",
      "display": "C",
      "role": "Participant",
      "x": 380
    }
  ],
  "rows": [
    {
      "y": 120,
      "event": {
        "span": {
          "start": 10,
          "end": 24
        },
        "kind": {
          "Autonumber": "100"
        }
      }
    },
    {
      "y": 160,
      "event": {
        "span": {
          "start": 25,
          "end": 37
        },
        "kind": {
          "Message": {
            "from": "A",
            "to": "B",
            "arrow": "->",
            "label": "init"
          }
        }
      }
    },
    {
      "y": 200,
      "event": {
        "span": {
          "start": 38,
          "end": 52
        },
        "kind": {
          "Message": {
            "from": "B",
            "to": "C",
            "arrow": "->",
            "label": "fanout"
          }
        }
      }
    },
    {
      "y": 240,
      "event": {
        "span": {
          "start": 53,
          "end": 66
        },
        "kind": {
          "Message": {
            "from": "C",
            "to": "A",
            "arrow": "-->",
            "label": "done"
          }
        }
      }
    }
  ]
}
