tests/snapshots/integration__family_member_block_render_snapshot_is_deterministic.snap
---
source: tests/integration.rs
expression: "String::from_utf8(svg).unwrap()"
---
<svg xmlns="http://www.w3.org/2000/svg" width="276" height="418" viewBox="0 0 276 418"><rect width="100%" height="100%" fill="#ffffff"/><defs><marker id="arrow-open" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="10" markerHeight="10" markerUnits="userSpaceOnUse" orient="auto-start-reverse"><path d="M0,0 L10,5 L0,10" fill="none" stroke="#1e293b" stroke-width="1.5"/></marker><marker id="arrow-triangle" viewBox="0 0 16 16" refX="15" refY="8" markerWidth="16" markerHeight="16" markerUnits="userSpaceOnUse" orient="auto-start-reverse"><polygon points="0,1 14,8 0,15" fill="#ffffff" stroke="#1e293b" stroke-width="1.5" fill-rule="nonzero"/></marker><marker id="arrow-diamond-filled" viewBox="0 0 14 10" refX="13" refY="5" markerWidth="14" markerHeight="10" markerUnits="userSpaceOnUse" orient="auto-start-reverse"><path d="M0,5 L7,0 L14,5 L7,10 z" fill="#1e293b" stroke="#1e293b" stroke-width="1"/></marker><marker id="arrow-diamond-open" viewBox="0 0 14 10" refX="13" refY="5" markerWidth="14" markerHeight="10" markerUnits="userSpaceOnUse" orient="auto-start-reverse"><path d="M0,5 L7,0 L14,5 L7,10 z" fill="#ffffff" stroke="#1e293b" stroke-width="1"/></marker></defs><polyline class="uml-relation puml-edge" data-uml-from="User" data-uml-to="Account" data-puml-edge-id="relation:0" data-puml-family="class" data-puml-edge-kind="relation" data-puml-from="User" data-puml-to="Account" data-uml-arrow="--&gt;" points="112,126 112,205 112,284" fill="none" stroke="#1e293b" stroke-width="2" marker-end="url(#arrow-open)" /><text class="puml-label" data-puml-owner="relation:0" data-puml-label-kind="edge-label" data-puml-bbox="204.4 182.2 27.3 15.0" x="218" y="193" text-anchor="middle" font-family="monospace" font-size="11" fill="#334155">owns</text><rect class="uml-node puml-node" data-uml-id="User" data-uml-kind="class" data-puml-id="User" data-puml-kind="class" data-puml-family="class" data-puml-bbox="32.0 32.0 160.0 94.0" x="32" y="32" width="160" height="94" rx="4" ry="4" fill="#ffffff" stroke="#1e293b" stroke-width="1.5"/><rect x="32" y="32" width="160" height="30" rx="4" ry="4" fill="#dbeafe" stroke="#1e293b" stroke-width="1.5"/><line x1="32" y1="62" x2="192" y2="62" stroke="#1e293b" stroke-width="1"/><text class="puml-label" data-puml-owner="User" data-puml-label-kind="node-label" data-puml-bbox="95.9 40.8 32.2 17.0" x="112" y="53" text-anchor="middle" font-family="monospace" font-size="13" font-weight="600" fill="#0f172a">User</text><text class="uml-member" data-uml-visibility="public" x="42" y="78" font-family="monospace" font-size="11" fill="#16a34a">+id: UUID</text><text class="uml-member" data-uml-visibility="public" x="42" y="94" font-family="monospace" font-size="11" fill="#16a34a">+name: String</text><line x1="32" y1="102" x2="192" y2="102" stroke="#1e293b" stroke-width="1"/><text class="uml-member" data-uml-visibility="public" x="42" y="110" font-family="monospace" font-size="11" fill="#16a34a">+activate()</text><rect class="uml-node puml-node" data-uml-id="Account" data-uml-kind="class" data-puml-id="Account" data-puml-kind="class" data-puml-family="class" data-puml-bbox="32.0 284.0 160.0 62.0" x="32" y="284" width="160" height="62" rx="4" ry="4" fill="#ffffff" stroke="#1e293b" stroke-width="1.5"/><rect x="32" y="284" width="160" height="30" rx="4" ry="4" fill="#dbeafe" stroke="#1e293b" stroke-width="1.5"/><line x1="32" y1="314" x2="192" y2="314" stroke="#1e293b" stroke-width="1"/><text class="puml-label" data-puml-owner="Account" data-puml-label-kind="node-label" data-puml-bbox="83.8 292.8 56.4 17.0" x="112" y="305" text-anchor="middle" font-family="monospace" font-size="13" font-weight="600" fill="#0f172a">Account</text><text class="uml-member" data-uml-visibility="public" x="42" y="330" font-family="monospace" font-size="11" fill="#16a34a">+number: String</text></svg>
