tests/snapshots/integration__lifecycle_return_inference_from_last_message_is_preserved_in_model_dump.snap
---
source: tests/integration.rs
assertion_line: 3858
expression: json
---
{
  "participants": [
    {
      "id": "A",
      "display": "A",
      "role": "Participant",
      "explicit": false
    },
    {
      "id": "B",
      "display": "B",
      "role": "Participant",
      "explicit": false
    }
  ],
  "events": [
    {
      "span": {
        "start": 10,
        "end": 22
      },
      "kind": {
        "Message": {
          "from": "A",
          "to": "B",
          "arrow": "->",
          "label": "call"
        }
      }
    },
    {
      "span": {
        "start": 23,
        "end": 34
      },
      "kind": {
        "Return": {
          "label": "done",
          "from": "B",
          "to": "A"
        }
      }
    }
  ],
  "teoz": false,
  "title": null,
  "header": null,
  "footer": null,
  "caption": null,
  "legend": null,
  "skinparams": [],
  "style": {
    "arrow_color": "#111",
    "lifeline_border_color": "#555",
    "participant_background_color": "#f6f6f6",
    "participant_border_color": "#111",
    "note_background_color": "#fff8c4",
    "note_border_color": "#111",
    "group_background_color": "#fafafa",
    "group_border_color": "#666"
  },
  "footbox_visible": true
}
